# ITER-autoencoder-for-labelling

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: main.py  pyproject.toml
backend/routers/: checking_router.py  data_router.py  labels_router.py  training_router.py  visualization_router.py
backend/services/: training_service.py
backend/src/autoencoder_for_labelling/data/: dataset.py
backend/src/autoencoder_for_labelling/models/: autoencoder.py
backend/src/autoencoder_for_labelling/training/: trainer.py
frontend/: index.html  style.css
frontend/scripts/: script_checking.js  script_classification.js  script_data.js  script_training.js  script_visualization.js
frontend/styles/: style.css
models/: current_architecture.json
models/saved_architechture/: model_epochs_70_dim_100_1761700194.json  model_epochs_70_dim_20_1761699358.json  model_epochs_70_dim_8_1761698999.json  model_epochs_90_dim_100_1761699744.json
notebooks/: mast_dataset_test.ipynb
results/: current_latents.npz  current_projection2d.npz  current_reconstructions.npz  exported_final_labels_1761314030.json  exported_labels_1761313794.json  labels_1761237480.json  labels_1761237519.json  labels_1761304256.json  labels_1761313238.json  labels_1761313257.json  labels_1761313295.json
results/labels/: exported_final_labels_1761690596.json
results/latents/: latents_1761343877_synthetic_data_2000_50.npz.npz  latents_1761345004_synthetic_data_2000_50.npz.npz  latents_1761688872_synthetic_data_2000_50.npz.npz  latents_1761693298_synthetic_data_2000_50.npz.npz
results/projections2d/: projection2d_1761343877_synthetic_data_2000_50.npz.npz  projection2d_1761345004_synthetic_data_2000_50.npz.npz  projection2d_1761688872_synthetic_data_2000_50.npz.npz  projection2d_1761693298_synthetic_data_2000_50.npz.npz
results/reconstructions/: reconstructions_1761343877_synthetic_data_2000_50.npz.npz  reconstructions_1761345004_synthetic_data_2000_50.npz.npz  reconstructions_1761688872_synthetic_data_2000_50.npz.npz  reconstructions_1761693298_synthetic_data_2000_50.npz.npz
src/autoencoder_for_labelling/: main.py
src/autoencoder_for_labelling/data/: dataset.py
src/autoencoder_for_labelling/models/: autoencoder.py
src/autoencoder_for_labelling/routers/: checking_router.py  data_router.py  labels_router.py  training_router.py  visualization_router.py
src/autoencoder_for_labelling/services/: training_service.py
src/autoencoder_for_labelling/training/: trainer.py  vae_loss.py
src/tests/: test_checking_router.py  test_core_units.py  test_data_router.py  test_labels_router.py  test_training_router.py  test_visualization_router.py
