[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoencoder-for-labelling"
version = "0.1.0"
description = "A PyTorch implementation of autoencoders for labelling tokamak timeseries data."
authors = [{ name = "Louis Brusset", email = "louis.brusset@etu.minesparis.psl.eu" }]
requires-python = ">=3.9,<3.12"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["pytorch", "Autoencoder", "latent space", "machine-learning"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.24.3",
    "matplotlib>=3.7.2",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.0",
    "torch>=2.0.1",
    "umap-learn>=0.5.3",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "black>=24.4.0",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "httpx>=0.25.0",  # pour tester l'API
]

[project.urls]
Repository = "https://github.com/LouisBrusset/ITER-autoencoder-for-labelling"

[project.scripts]
autoencoder-labelling = "autoencoder_for_labelling.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["autoencoder_for_labelling*"]

[tool.setuptools.package-data]
"autoencoder_for_labelling" = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=autoencoder_for_labelling",
    "--cov-report=term-missing",
    "--cov-report=html"
]

[tool.coverage.run]
source = ["autoencoder_for_labelling"]
omit = ["*/tests/*", "*/test_*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "matplotlib.*",
    "umap.*"
]
ignore_missing_imports = true